fix: Background color asp-action in Home

--- a/InvestmentTracker/Views/Home/Index.cshtml
+++ b/InvestmentTracker/Views/Home/Index.cshtml
@@ -34,9 +34,9 @@
     </tbody>
 </table>
 <div class="mt-4">
-    <a asp-action="Create" class="btn btn-submit">Add New Investment Lot</a>
+    <a asp-action="Create" class="btn-submit">Add New Investment Lot</a>
 </div>
 
 <div class="mt-4">
-    <a asp-action="Sell" class="btn btn-submit">Sell Shares</a>
+    <a asp-action="Sell" class="btn-submit">Sell Shares</a>
 </div>
