--- a/InvestmentTracker/wwwroot/css/site.css
+++ b/InvestmentTracker/wwwroot/css/site.css
@@ -18,6 +18,7 @@ table {
     border-collapse: collapse;
     margin: 20px 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 th, td {
