--- a/InvestmentTracker/Views/Shared/Error.cshtml
+++ b/InvestmentTracker/Views/Shared/Error.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Synchronizing environtment.</h1>
+<h2 class="text-danger">Please wait a few seconds an reload.</h2>
 
 @if (Model.ShowRequestId)
 {
