fix: error message

--- a/InvestmentTracker/Views/Shared/Error.cshtml
+++ b/InvestmentTracker/Views/Shared/Error.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Synchronizing environtment.</h1>
+<h1 class="text-danger">Synchronizing environment.</h1>
 <h2 class="text-danger">Please wait a few seconds an reload.</h2>
 
 @if (Model.ShowRequestId)
